feat: Add Swagger interfaces and Feature Tests.
